[package]
name = "marlowe-indexer"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#cardano_chain_sync = { path = "../cardano_chain_sync" }
tokio = { version ="1.28.0", features = ["full"] }
anyhow = { version ="1.0.71" }
error-stack = {version="0.4.0", features=["std","anyhow","hooks"]}
pallas = "0.18.1"
pallas-primitives = "0.18.1"
pallas-traverse = "0.18.1"
pallas-crypto = "*"
#pallas_network = { git = "https://github.com/OlofBlomqvist/pallas", branch="feat-win-pipes", package="pallas-network" }
pallas-network = { path = "C:/Users/oblink/Documents/GitHub/pallas/pallas-network" }
#pallas_network = { git = "https://github.com/txpipe/pallas.git", branch = "main", package = "pallas-network" }
#pallas-network = { path = "C:/Users/oblink/Documents/GitHub/pallas/pallas-network" }
#pallas_network = { git = "https://github.com/OlofBlomqvist/pallas", branch="feat-win-pipes", package="pallas-network" }
warp = "0.3"
thiserror = "1.0.40"
tonic = "*"
#marlowe_lang = { version = "0.1.22",features=["unstable","utils"] }
#marlowe_lang = { path = "../../marlowe_rust",features=["unstable","utils"] }
marlowe_lang = { git = "https://github.com/OlofBlomqvist/marlowe_lang",features=["unstable","utils"],branch = "master"}
hex = "0.4.3"
async-graphql = { version= "6.0.6", features=["dynamic-schema"]}
async-graphql-warp = "6.0.4"
async-trait = "0.1.68"
serde_json = "1.0.96"
env_logger = "0.10.0"
bs58 = "*"
ctrlc = "3.1"
reqwest = "*"
crossterm = "*"
clap = "4.3.21"
structopt = "0.3.26"
strum_macros = "0.25.2"
futures-timer = "3.0.2"
serde = "1.0.183"


opentelemetry = {version="0.20",features=["rt-tokio"]}
opentelemetry-stdout = { version = "0.1.0", features = ["trace"] }
tracing = "0.1"
tracing-opentelemetry = "0.20"
tracing-subscriber = { version = "0.3", features=["std","env-filter","fmt"] }
opentelemetry-otlp = "0.13.0"
crossbeam = "0.8.2"
sled = "0.34.7"
futures = "0.3.28"
bytes = "1.5.0"
chrono = "0.4.31"
rand = "0.8.5"

[features]
debug = []
