[package]
name = "cardano_chain_sync"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.68"
bytes = "1.4.0"
error-stack = {version="0.4.0", features=["std","anyhow","hooks"]}
hex = "0.4.3"
pallas = "0.18.1"
pallas-primitives = "0.18.1"
pallas-traverse = "0.18.1"
pallas_network = { git = "https://github.com/OlofBlomqvist/pallas", branch="feat-win-pipes", package="pallas-network" }
#pallas-network = { path = "C:/Users/oblink/Documents/GitHub/pallas/pallas-network" }
#pallas_network = { git = "https://github.com/txpipe/pallas.git", branch = "main", package = "pallas-network" }

thiserror = "1.0.40"
tokio = { version ="1.28.0", features = ["full"] }
tracing = "0.1.37"
